# brazillian-ecommerce-analytics

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: base.yaml
notebook/: extract_detail.ipynb  transform_detail.ipynb
ops/: update_path.sh
src/streamlit_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/streamlit_lab/: data_utils.py  extract_data.py  generate_data.py  read_config.py  transform_data.py
