
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit_app"
version = "1.0.0"
description = "A comprehensive analytics dashboard for e-commerce data, built with Python, Streamlit, and Plotly. This project demonstrates end-to-end data engineering and visualization capabilities."
requires-python = ">=3.10"
dependencies = [
    "kagglehub==0.3.13",
    "numpy==1.26.2",
    "pandas==2.1.3",
    "plotly==5.18.0",
    "pyyaml>=6.0",
    "sqlalchemy==2.0.23",
    "streamlit==1.29.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["streamlit_lab*"]

